<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--    header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="14dp"
        android:layout_marginTop="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/angle_back"
            app:tint="@color/black"
            android:contentDescription="@string/back_navigation"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_acc"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                app:cardBackgroundColor="#FF0000"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="9+"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/caret_solid"
                app:tint="@color/black" />


        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginRight="14dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pen_solid"
            app:tint="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:scaleType="centerCrop"
            android:src="@drawable/search_icon"
            app:tint="@color/black" />
    </LinearLayout>
<!--    profile and cover-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="232dp">
        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cover" />
        <RelativeLayout
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="26dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="1in"
                >
                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/changePf"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                app:cardCornerRadius="50in">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/camara_solid"
                    app:tint="@color/white" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/changeCv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/cover"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="50in">

            <ImageView
                android:id="@+id/editCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/camara_solid"
                app:tint="@color/white"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
<!--    name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="14dp"
        android:orientation="vertical"
        android:layout_marginLeft="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_profile"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_profile"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:id="@+id/major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Major"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3.2k"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/friend"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Love you mauhhhhh"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
<!--    edit profile-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:backgroundTint="#0066ff"
            android:text="@string/addfriend"
            app:icon="@drawable/plus_solid"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/white"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:cornerRadius="8dp"
            app:icon="@drawable/pen_solid"
            app:iconGravity="textStart"
            app:iconPadding="6dp"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="0.3"
            android:text=""
            app:backgroundTint="@color/grey"
            app:cornerRadius="8dp"
            app:icon="@drawable/esslipe_black"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/black" />
    </LinearLayout>
<!--    info of account-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/work"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/student_at"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="Royal University Of Phnum Penh"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/heart_solid"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/Single"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/esslipe_black"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/See_your_About_info"
            android:textSize="16sp" />
    </LinearLayout>
<!--    edit public details-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/editPublic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/edit_info_detail"
        android:textColor="#0066ff"
        android:textSize="14sp"
        android:backgroundTint="#150066ff"
        app:cornerRadius="8dp"/>
</LinearLayout>

